--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ body {
 .weather-box .temperature {
     position: relative;
     color: #06283D;
-    font-size: 4rem;  /*The root element's font-size*/
+    font-size: 4rem;
+      /*The root element's font-size*/
     font-size: 800;
     margin-top: 30px;
     margin-left: -16px;
